--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -15,10 +15,12 @@ const { href, title, body } = Astro.props;
 			<span>&rarr;</span>
 		</h2>
 		<p>
-			{body}
+			22-09-24 至 22-09-30
 		</p>
 	</a>
+	<span class="link-card-tag">New</span>
 </li>
+
 <style>
 	.link-card {
 		list-style: none;
@@ -31,6 +33,9 @@ const { href, title, body } = Astro.props;
 		background-position: 100%;
 		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
 		box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
+		position: relative;
+		max-width: 300px;
+		height: 180px;
 	}
 
 	.link-card > a {
@@ -42,6 +47,17 @@ const { href, title, body } = Astro.props;
 		color: #111;
 		background-color: white;
 		opacity: 0.8;
+	}
+	.link-card-tag {
+		position: absolute;
+		top: 0;
+		right: 0;
+		width: auto;
+		padding: 6px;
+		color: #fff;
+		font-size: 14px;
+		border-bottom-left-radius: 12px;
+		background-color: rgba(255, 0, 0, 0.5);
 	}
 	h2 {
 		margin: 0;
