--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,7 +49,7 @@ import Card from '../components/Card.astro';
 	main {
 		margin: auto;
 		padding: 1.5rem;
-		max-width: 180ch;
+		max-width: 100%;
 	}
 	h1 {
 		font-size: 3rem;
@@ -84,8 +84,9 @@ import Card from '../components/Card.astro';
 	}
 	.link-card-grid {
 		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 1rem;
+		grid-template-columns: repeat(auto-fit, minmax(256px, 1fr));
+		min-width: 256px;
+		gap: 16px;
 		padding: 0;
 	}
 </style>
